# capture

./: CMakeLists.txt  README.md
app-resources/: recorder.desktop
recorder/: CMakeLists.txt  Error.cpp  Error.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Settings.cpp  Settings.h  VideoWidget.cpp  VideoWidget.h  main.cpp
recorder/camera/: CameraCapture.cpp  CameraCapture.h  UICameraSettings.cpp  UICameraSettings.h  UICameraSettings.ui
scripts/: create-appimages.sh
